--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=El+Messiri&family=Macondo&display=swap"
         rel="stylesheet">
     <title>Thomas</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" type = "text/css" href="style.css">
 </head>
 
 <body>
